--- a/gateway-zuul/pom.xml
+++ b/gateway-zuul/pom.xml
@@ -53,6 +53,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.cloud</groupId>
+            <artifactId>api-model</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
