--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>monitor-center</module>
         <module>log-center</module>
         <module>notification-center</module>
+        <module>log-starter</module>
     </modules>
 
 
@@ -72,6 +73,16 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>${commons-collections}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${aspectj.version}</version>
         </dependency>
     </dependencies>
 
