update readme and add architecture diagram and change microservice

--- a/log-center/pom.xml
+++ b/log-center/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>log-center</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.cloud</groupId>
+            <artifactId>api-model</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
