--- a/compute-center/pom.xml
+++ b/compute-center/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>notification-center</artifactId>
+    <artifactId>compute-center</artifactId>
 
 
 </project>
