--- a/data-center/pom.xml
+++ b/data-center/pom.xml
@@ -9,14 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common-model</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>data-center</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>${security-oauth2.version}</version>
-        </dependency>
-    </dependencies>
+
 </project>
