--- a/gateway-center/pom.xml
+++ b/gateway-center/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>gateway-zuul</artifactId>
+    <artifactId>gateway-model</artifactId>
     <packaging>jar</packaging>
 
 
